vagrant file touchups

--- a/centos-6.7-x86_64-minimal/Vagrantfile
+++ b/centos-6.7-x86_64-minimal/Vagrantfile
@@ -1,15 +1,25 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# https://docs.vagrantup.com.
+
 Vagrant.configure(2) do |config|
-  # https://docs.vagrantup.com.
   config.vm.box = "centos-6.7-x86_64-minimal.box"
+
   # This is the default synced folder. Without VirtualBox Guest Additions this
   # mount will not succeed and the timeout takes a while, so disable it to boot
   # quickly.
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
   config.vm.provider "virtualbox" do |vb|
+    # Show the GUI
+    ##vb.gui = true
+    # If using a desktop environment, allocate more VRAM and enable 3d accel
+    ##vb.customize ["modifyvm", :id, "--vram", "64"]
+    ##vb.customize ["modifyvm", :id, "--accelerate3d", "on"]
+
+    # Vagrant guests are allocated 1 CPU by default. This option can enable more
+    ##vb.cpus = "4"
     vb.memory = "1024"
     # https://www.virtualbox.org/manual/ch08.html#vboxmanage-modifyvm
     # virtio may have improved performance over the default emulated e1000 NIC.
